--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "Dolphin Gas (Private) Limited",
-    "url": "http://www.dolphingas.pk",
+    "url": " https://dolphingas786.github.io/dolphingas/",
     "email": "mailto:dolphingas786@gmail.com",
     "telephone": "+92-339-0291192",
     "address": {
