--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <p><strong>Address:</strong> Mohri Patak, Islamabad, Pakistan</p>
         <p><strong>Phone:</strong> +92‑339‑0291192</p>
         <p><strong>Email:</strong> <a href="mailto:dolphingas786@gmail.com">dolphingas786@gmail.com</a></p>
-        <p><strong>Website:</strong> <a href="https://dolphingas786.github.io/dolphingas/" rel="noopener">www.dolphingas.pk</a></p>
+        <p><strong>Website:</strong> <a href="https://dolphingas786.github.io/dolphingas/" rel="noopener">https://dolphingas786.github.io/dolphingas/</a></p>
         <p class="small">Office hours: Mon–Sat, 9:00–18:00 PKT</p>
       </div>
       <form aria-label="Contact form" onsubmit="event.preventDefault(); alert('Thank you! We will get back to you shortly.');">
