Update cover photo

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <section class="hero" aria-label="Hero">
     <div class="media" aria-hidden="true">
-      <img src="assets/AI/DolphinPlant.png" alt="Dolphin Gas storage tank" />
+      <img src="assets/AI/CoverPhoto.jpg" alt="Dolphin Gas storage tank" />
     </div>
     <div class="container">
       <h2>Safe Energy. Trusted Supply.</h2>
