--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </div>
         </article>
         <article class="card" aria-labelledby="p3">
-          <img src="assets/AI/DroneView.png" alt="Industrial bulk LPG storage" />
+          <img src="assets/AI/CylinderStorage.png" alt="Industrial bulk LPG storage" />
           <div class="body">
             <h4 id="p3">Bulk & Industrial Solutions</h4>
             <p class="meta">On‑site storage • Scheduled deliveries • Compliance support</p>
@@ -156,7 +156,7 @@
           <li><span class="check">✔</span><span>Emergency response procedures and drills</span></li>
         </ul>
       </div>
-      <img src="assets/AI/CylinderStorage.png" alt="Technician performing safety checks with clipboard" />
+      <img src="assets/AI/FillingStation.jpg" alt="Technician performing safety checks with clipboard" />
     </div>
   </section>
 
@@ -173,7 +173,7 @@
       </div>
       <form aria-label="Contact form" onsubmit="event.preventDefault(); alert('Thank you! We will get back to you shortly.');">
         <label for="name">Your name</label>
-        <input id="name" name="name" placeholder="e.g., Ayesha Khan" required />
+        <input id="name" name="name" placeholder="e.g., Fatima Naseem" required />
         <label for="email">Email</label>
         <input id="email" name="email" type="email" placeholder="you@example.com" required />
         <label for="msg">Message</label>
